# rootDictinary

./: CMakeLists.txt  README.md
oaEvent/: EoaCore.cxx  EoaCore.hxx  LinkDef.h  TChannelId.cxx  TChannelId.hxx
